# sps-alsa-explore

./: .gitignore  AUTHORS  Dockerfile  Makefile.am  README.md  RELEASE NOTES.md  alsaexplore.c  alsaexplore.h  amixer  amixer.c  configure.ac  debug.c  debug.h  gitversion.h  sps-alsa-explore.c  sps-alsa-explore.h
.github/workflows/: docker.yml  greetings.yml
